--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "wflow-r4ds"
+name: wflow-r4ds
 output_dir: ../docs
 navbar:
-  title: "wflow-r4ds"
+  title: wflow-r4ds
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/jdblischak/wflow-r4ds
 output:
   workflowr::wflow_html:
     toc: yes
